Fix GHCR permissions for package push
Add workflow-level permissions for packages:write to allow
pushing Docker images to GitHub Container Registry.

--- a/.github/workflows/docker-build.yml
+++ b/.github/workflows/docker-build.yml
@@ -36,6 +36,11 @@ env:
   REGISTRY: ghcr.io
   IMAGE_PREFIX: ${{ github.repository_owner }}
 
+# Grant GITHUB_TOKEN permissions to push packages
+permissions:
+  contents: read
+  packages: write
+
 jobs:
   # Determine which images to build
   prepare:
