Add Railway configuration for all TeamSync products
- Updated railway.toml for TeamSync Document
- Added railway-sheets.toml for TeamSync Sheets
- Added railway-presentation.toml for TeamSync Presentation
- Each config uses respective Dockerfile from docker/ directory
- Configured healthcheck, restart policy, and deployment settings

--- a/railway-presentation.toml
+++ b/railway-presentation.toml
@@ -1,9 +1,8 @@
-# TeamSync Document - Railway Configuration
-# Uses pre-built image from GitHub Container Registry
+# TeamSync Presentation - Railway Configuration
 
 [build]
 builder = "DOCKERFILE"
-dockerfilePath = "docker/Dockerfile.document"
+dockerfilePath = "docker/Dockerfile.presentation"
 
 [deploy]
 numReplicas = 1
