--- a/docker/Dockerfile.document-source
+++ b/docker/Dockerfile.document-source
@@ -122,6 +122,7 @@ RUN apt-get update && apt-get install -y --no-install-recommends \
     python3-dev \
     python3-lxml \
     python3-polib \
+    python3-setuptools \
     rsync \
     unzip \
     wget \
@@ -196,6 +197,7 @@ RUN echo "==> Configuring LibreOffice build..." \
     --disable-skia \
     --disable-online-update \
     --disable-ccache \
+    --disable-python \
     --enable-release-build \
     --enable-epm \
     --without-java \
