Fix LibreOffice/Collabora Online version compatibility
Use Collabora's patched LibreOffice core branch (distro/collabora/co-24.04)
instead of vanilla LibreOffice (libreoffice-24-2-7). The Collabora Online
co-24.04 branch requires APIs that only exist in Collabora's fork:
- extractDocumentStructureRequest
- setViewOption
- renderNextSlideLayer
- createSlideRenderer
- joinThreads/startThreads
- registerAnyInputCallback
- and others

--- a/docker/Dockerfile.document-source
+++ b/docker/Dockerfile.document-source
@@ -150,7 +150,7 @@ WORKDIR /build
 # =============================================================================
 FROM builder-base AS locore
 
-ARG LO_VERSION=libreoffice-24-2-7
+ARG LO_VERSION=distro/collabora/co-24.04
 ENV LO_BUILD_DIR=/build/libreoffice
 
 WORKDIR /build
