--- a/docker/Dockerfile.document-source
+++ b/docker/Dockerfile.document-source
@@ -509,6 +509,9 @@ RUN apt-get update && apt-get install -y --no-install-recommends \
         /usr/share/info/* \
         /usr/share/lintian/*
 
+# Build fontconfig cache to prevent LibreOffice initialization hang
+RUN fc-cache -fv
+
 # Create non-root service user (security best practice)
 RUN useradd -r -m -d /opt/cool -s /bin/false -c "Collabora Online" cool
 
