Disable Docker cache for document-source builds
The document-source build requires LibreOffice to be compiled from scratch,
which takes 3-5 hours. Docker's build cache was incorrectly serving stale
layers with incomplete LibreOffice artifacts, causing coolforkit to fail
with 'Neither libsofficeapp.so or libmergedlo.so exist'.

This change:
- Disables cache-from/cache-to for document-source builds
- Sets no-cache: true for document-source to force fresh builds
- Keeps caching enabled for other products (document, sheets, presentation)

--- a/.github/workflows/docker-build.yml
+++ b/.github/workflows/docker-build.yml
@@ -114,8 +114,10 @@ jobs:
           push: ${{ github.event_name != 'pull_request' }}
           tags: ${{ steps.meta.outputs.tags }}
           labels: ${{ steps.meta.outputs.labels }}
-          cache-from: type=gha,scope=${{ matrix.product }}
-          cache-to: type=gha,mode=max,scope=${{ matrix.product }}
+          # Disable cache for source builds to ensure LibreOffice compiles from scratch
+          cache-from: ${{ matrix.product != 'document-source' && format('type=gha,scope={0}', matrix.product) || '' }}
+          cache-to: ${{ matrix.product != 'document-source' && format('type=gha,mode=max,scope={0}', matrix.product) || '' }}
+          no-cache: ${{ matrix.product == 'document-source' }}
           platforms: linux/amd64
           provenance: false
 
