Fix ICU 74 breakiterator incompatibility - use bundled ICU
LibreOffice build was failing with:
  ICU Error 'U_BRK_UNRECOGNIZED_OPTION' at line 17

This is a known issue (Bug 158108) where Ubuntu 24.04's ICU 74 has
incompatible breakiterator rule syntax with the co-24.04 branch.

Solution: Build with bundled ICU (--without-system-icu) instead of
system ICU. This avoids the breakiterator compatibility issue and
ensures the LibreOffice build completes successfully.

References:
- https://bugs.documentfoundation.org/show_bug.cgi?id=158108
- https://bugs.documentfoundation.org/show_bug.cgi?id=49885

--- a/docker/Dockerfile.document-source
+++ b/docker/Dockerfile.document-source
@@ -209,7 +209,7 @@ RUN echo "==> Configuring LibreOffice build..." \
     --without-fonts \
     --with-system-curl \
     --with-system-expat \
-    --with-system-icu \
+    --without-system-icu \
     --with-system-libxml \
     --with-system-openssl \
     --with-system-zlib \
@@ -459,7 +459,7 @@ RUN apt-get update && apt-get install -y --no-install-recommends \
     libfreetype6 \
     libfontconfig1 \
     libharfbuzz0b \
-    libicu74 \
+    # Note: ICU is bundled in LibreOffice build (--without-system-icu) due to ICU 74 breakiterator incompatibility
     libexpat1 \
     libxml2 \
     libxslt1.1 \
