--- a/docker/Dockerfile.document-source
+++ b/docker/Dockerfile.document-source
@@ -52,6 +52,7 @@ RUN apt-get update && apt-get install -y --no-install-recommends \
     fontconfig \
     fonts-liberation \
     fonts-opensymbol \
+    gettext \
     git \
     gperf \
     graphviz \
