--- a/docker/Dockerfile.sheets.25
+++ b/docker/Dockerfile.sheets.25
@@ -89,17 +89,12 @@ RUN if [ -f /build/branding/images/logo.svg ]; then \
 WORKDIR /build/online/browser
 RUN npm install --no-audit
 
-# Find where LibreOfficeKit headers are installed by the Collabora packages
-RUN find /opt -name "LibreOfficeKit.h" 2>/dev/null || echo "Header not in /opt" \
-    && find /usr -name "LibreOfficeKit.h" 2>/dev/null || echo "Header not in /usr" \
-    && ls -la /opt/collaboraoffice/ 2>/dev/null || echo "No /opt/collaboraoffice" \
-    && ls -la /opt/cool/ 2>/dev/null || echo "No /opt/cool"
-
 # Build coolwsd from source (this also builds browser assets via configure/make)
+# LOKit headers are bundled in the online source at bundled/include/
 WORKDIR /build/online
 RUN ./autogen.sh && ./configure \
     --prefix=/opt/cool \
-    --with-lokit-path=/opt/collaboraoffice/include \
+    --with-lokit-path=/build/online/bundled/include \
     --with-lo-path=/opt/collaboraoffice \
     --disable-setcap \
     --enable-silent-rules
